clusters/lgsk8sp1/tools/grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
      name: tcp-grafana
