clusters/lgsk8sp1/tools/grafana/grafana-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-grafana
      protocol: HTTP
    hosts:
    - "grafana.diegoluisi.eti.br"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "grafana.diegoluisi.eti.br"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: grafana
    timeout: 30s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: monitoring
spec:
  host: grafana.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
